welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:9: error: type mismatch;
 found   : Unit
 required: Boolean
  if (couleur=Color.orange){
             ^